--- a/persbox/css/module/style.scss
+++ b/persbox/css/module/style.scss
@@ -46,10 +46,10 @@ $color-persbox : #2d3c4c;
 
 
 .under-line {
-    border-bottom: solid 6px;
+    border-bottom: solid 4px;
     font-size: 1.00em;
     line-height: 2.00em;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
 }
 
 /** headeer **/
@@ -65,6 +65,18 @@ header{
         min-height: 36px;
         padding: 1%;
         width: 98%;
+                    
+        h1{
+            a{
+                figure{
+                    width: 100px;
+                    height: 40px;
+                    background-image: url(/persbox/img/common/logo-w.png);
+                    background-repeat: no-repeat;
+                    display: block;
+                }
+            }
+        }
         
         h1,nav{
             display: table-cell;
@@ -77,7 +89,7 @@ header{
                 float: right;
                 
                 li,li a{
-                    font-size: 0.9em;
+                    font-size: 1.0em;
                     color: $color-white;
                     display: table-cell;
                     padding-right:13px;
@@ -113,6 +125,18 @@ header{
     padding-top: 15px;
     background: rgba(255,255,255,.7);
     border-bottom: solid 1px $color-light-gray;
+                    
+    h1{
+        a{
+            figure{
+                width: 100px;
+                height: 40px;
+                background-image: url(/persbox/img/common/logo-c.png);
+                background-repeat: no-repeat;
+                display: block;
+            }
+        }
+    }
     
     h1, a{
         color: $color-persbox;
@@ -128,34 +152,31 @@ header{
 }
 
 
+
+
 /** key_visual **/
 .key_visual{
-    
-   // background-image: url(/persbox/img/pers/pers04.png);
     background-size: cover;
     background-repeat: no-repeat;
     display: block;
     height: 100vh;
+    animation: bg-color 60s infinite;
+    -webkit-animation: bg-color 60s infinite;
+    
     
         .key_inside{
-            background-color: rgba(41, 41, 41, 0.52);
+            background-color: rgba(40, 40, 40, 0.20);
             height: 100%;
             text-align: center;
             width: 100%;
             
+            
             .key_title{
-                padding-top: 16%;
+                padding-top: 35vh;
                 
                 h1{
                     color: $color-white;
-                    font-size: 8.65em;
-                    line-height: 1.15em;
-                    padding-bottom: 20px;
-                }
-                
-                h2{
-                    color: $color-white;
-                    font-size: 2.35em;
+                    font-size: 2.85em;
                     line-height: 1.75em;
                 }
                 
@@ -181,21 +202,7 @@ header{
                 
                 li{
                     padding-bottom: 20px;    
-<<<<<<< HEAD
-                }
-                
-                dl{
-                    display: table;
-                    width: 100%;
-                    
-                    dt,dd{
-                        display: table-cell;
-                    }
-                    dt{
-                        width: 40%;
-                    }
-=======
->>>>>>> stage
+
                 }
             }
             
@@ -208,31 +215,7 @@ header{
                 margin: 60px 0;
                 width: 100%;
                 
-<<<<<<< HEAD
-=======
-                dl{
-                    display: table;
-                    width: 100%;
-                    
-                    dt,dd{
-                        display: table-cell;
-                    }
-                    dt{
-                        width: 40%;
-                    }
-                }
-            }
-            
-        }
-        
-        .company-map-area{
-            
-            ul{
-                display: table;
-                margin: 60px 0;
-                width: 100%;
-                
->>>>>>> stage
+
                 li{
                     display: table-cell;;
                     text-align: center;
@@ -268,6 +251,33 @@ header{
         }
         
 }
+@-webkit-keyframes bg-color {
+    0% { background-image: url(/persbox/img/pers/pers01.png);}
+    10% { background-image: url(/persbox/img/pers/pers02.png); }
+    20% { background-image: url(/persbox/img/pers/pers03.png); }
+    30% { background-image: url(/persbox/img/pers/pers04.png); }
+    40% { background-image: url(/persbox/img/pers/pers05.png); }
+    50% { background-image: url(/persbox/img/pers/pers07.png); }
+    60% { background-image: url(/persbox/img/pers/pers08.png); }
+    70% { background-image: url(/persbox/img/pers/pers09.png); }
+    80% { background-image: url(/persbox/img/pers/pers10.png); }
+    90% { background-image: url(/persbox/img/pers/pers11.png); }
+    100% { background-image: url(/persbox/img/pers/pers12.png); }
+}
+
+@keyframes bg-color {
+    0% { background-image: url(/persbox/img/pers/pers01.png);}
+    10% { background-image: url(/persbox/img/pers/pers02.png); }
+    20% { background-image: url(/persbox/img/pers/pers03.png); }
+    30% { background-image: url(/persbox/img/pers/pers04.png); }
+    40% { background-image: url(/persbox/img/pers/pers05.png); }
+    50% { background-image: url(/persbox/img/pers/pers07.png); }
+    60% { background-image: url(/persbox/img/pers/pers08.png); }
+    70% { background-image: url(/persbox/img/pers/pers09.png); }
+    80% { background-image: url(/persbox/img/pers/pers10.png); }
+    90% { background-image: url(/persbox/img/pers/pers11.png); }
+    100% { background-image: url(/persbox/img/pers/pers12.png); }
+}  
 
 /** who we are **/
 .contents-who {
@@ -324,10 +334,10 @@ header{
             text-align: center;
         
             h1{
-                font-size: 4.75em;
+                font-size: 3.75em;
                 color: #fff;
                 padding-top: 8vh;
-                border-bottom: solid 6px;
+                border-bottom: solid 2px;
                 line-height: 1.0em;
                 padding-bottom: 20px;
                 width: 300px;
@@ -381,7 +391,7 @@ header{
                 text-align: center;
                 
                 h1{
-                    font-size: 4.75em;
+                    font-size: 3.75em;
                     line-height: 1.00em;
                     margin: 0 auto;
                     width: 400px;
@@ -485,7 +495,9 @@ div#lightbox-panel12,
 div#lightbox-panel13,
 div#lightbox-panel14,
 div#lightbox-panel15,
-div#lightbox-panel16{ 
+div#lightbox-panel16,
+div#lightbox-panel17,
+div#lightbox-panel18{ 
     position: fixed;
     top: 10vh;
     left: 20%;
@@ -539,10 +551,12 @@ header {
             text-align: center;
             margin: 0 auto;
             vertical-align: middle;
-            padding: 4%;
+            padding-left: 4%;
+            padding-right: 4%;
+            padding-top: 20vh !important;
         
         h1{
-            font-size: 7.00em !important;
+            font-size: 3.00em !important;
             padding-top: 15%;
         }
         h2{
